<resources>
    <string name="app_name">FamilyTime</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_day_view">DayView</string>
    <string name="title_activity_week_view">WeekView</string>

    <!-- Rachelle's part of strings -->
    <string name="event_titleLabel">Title:</string>
    <string name="event_allDayLabel">All-Day:</string>
    <string name="event_startLabel">Start:</string>
    <string name="event_endLabel">End:</string>
    <string name="event_timePlaceholder">hh:mm</string>
    <string name="event_date">Date</string>
    <string name="event_recurringLabel">Recurring:</string>
    <string name="event_colourLabel">Colour:</string>
    <string name="event_notesLabel">Notes:</string>
    <string name="event_cancelBtnLabel">Cancel</string>
    <string name="event_confirmBtnLabel">Confirm</string>
    <string name="recurringpopup_label">Number of times this event recurs?</string>
    <string name="event_notRecurringStatus">Does not repeat</string>
    <string name="event_locationLabel">Location:</string>
    <string name="event_deleteBtnLabel">Delete Event</string>

    <string-array name="event_recurringEventSpinner">
        <item>does not repeat</item>
        <item>once a day</item>
        <item>once a week</item>
        <item>once a month</item>
        <item>once a year</item>
    </string-array>
    <string-array name="event_twelveHourClockSpinner">
        <item>am</item>
        <item>pm</item>
    </string-array>
    <!-- end of Rachelle's part of strings -->
    <string name="event_title_format">%s%s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="currentWeek">Week of 10-17</string>

    <!-- Times -->
    <string-array name="timelist">
        <item>12:00 am</item>
        <item>12:30 am</item>
        <item>1:00 am</item>
        <item>1:30 am</item>
        <item>2:00 am</item>
        <item>2:30 am</item>
        <item>3:00 am</item>
        <item>3:30 am</item>
        <item>4:00 am</item>
        <item>4:30 am</item>
        <item>5:00 am</item>
        <item>5:30 am</item>
        <item>6:00 am</item>
        <item>6:30 am</item>
        <item>7:00 am</item>
        <item>7:30 am</item>
        <item>8:00 am</item>
        <item>8:30 am</item>
        <item>9:00 am</item>
        <item>9:30 am</item>
        <item>10:00 am</item>
        <item>10:30 am</item>
        <item>11:00 am</item>
        <item>11:30 am</item>
        <item>12:00 pm</item>
        <item>12:30 pm</item>
        <item>1:00 pm</item>
        <item>1:30 pm</item>
        <item>2:00 pm</item>
        <item>2:30 pm</item>
        <item>3:00 pm</item>
        <item>3:30 pm</item>
        <item>4:00 pm</item>
        <item>4:30 pm</item>
        <item>5:00 pm</item>
        <item>5:30 pm</item>
        <item>6:00 pm</item>
        <item>6:30 pm</item>
        <item>7:00 pm</item>
        <item>7:30 pm</item>
        <item>8:00 pm</item>
        <item>8:30 pm</item>
        <item>9:00 pm</item>
        <item>9:30 pm</item>
        <item>10:00 pm</item>
        <item>10:30 pm</item>
        <item>11:00 pm</item>
        <item>11:30 pm</item>
    </string-array>

    <string-array name="weekdays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="popupNoFileError">Sorry, it looks like no\nschedules exist on your device!</string>
    <string-array name="eventcolorsskeetskeet">
        <item>#ffc300</item>
        <item>#c70039</item>
        <item>#0e6335</item>
        <item>#8d20de</item>
        <item>#0eb9c4</item>
    </string-array>

</resources>
