<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/event_titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/event_titleLabel"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_allDayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/event_allDayLabel"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_titleInput" />

    <EditText
        android:id="@+id/event_endTimeInput"
        android:layout_width="105dp"
        android:layout_height="53dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="time"
        android:text="hh:mm"
        android:textSize="10pt"
        app:layout_constraintStart_toEndOf="@+id/event_endDate"
        app:layout_constraintTop_toBottomOf="@+id/event_startTimeInput" />

    <TextView
        android:id="@+id/event_recurringLabel"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/event_recurringLabel"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_endDate" />

    <TextView
        android:id="@+id/event_colourLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/event_colourLabel"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_locationLabel" />


    <EditText
        android:id="@+id/event_startTimeInput"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="time"
        android:text="hh:mm"
        android:textSize="10pt"
        app:layout_constraintStart_toEndOf="@+id/event_startDate"
        app:layout_constraintTop_toBottomOf="@+id/event_titleInput" />

    <TextView
        android:id="@+id/event_noteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:text="@string/event_notesLabel"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_colourLabel" />

    <Button
        android:id="@+id/event_cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:text="@string/event_cancelBtnLabel"
        app:layout_constraintStart_toEndOf="@+id/event_deleteBtn"
        app:layout_constraintTop_toBottomOf="@+id/event_noteInput" />

    <Button
        android:id="@+id/event_confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/event_confirmBtnLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_noteInput" />

    <EditText
        android:id="@+id/event_noteInput"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_colourButton" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="145dp" />

    <EditText
        android:id="@+id/event_titleInput"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_startDate"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:text="@string/event_date"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_allDayCheckBox" />

    <TextView
        android:id="@+id/event_endDate"
        android:layout_width="153dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/event_date"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_startDate" />

    <CheckBox
        android:id="@+id/event_allDayCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/event_allDayLabel"
        app:layout_constraintTop_toBottomOf="@+id/event_titleInput" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="266dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="323dp" />

    <Spinner
        android:id="@+id/event_startSpinner"
        android:layout_width="65dp"
        android:layout_height="26dp"
        android:layout_marginTop="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_titleInput" />

    <Spinner
        android:id="@+id/event_endSpinner"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_startSpinner" />

    <Button
        android:id="@+id/event_colourButton"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="168dp"
        android:layout_marginTop="13dp"
        android:text="Change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_locationInput" />

    <TextView
        android:id="@+id/event_recurringStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="23dp"
        android:text="@string/event_notRecurringStatus"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_endTimeInput" />

    <TextView
        android:id="@+id/event_locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/event_locationLabel"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_recurringLabel" />

    <EditText
        android:id="@+id/event_locationInput"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_recurringLabel" />

    <Button
        android:id="@+id/event_deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/event_deleteBtnLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_noteInput" />

</android.support.constraint.ConstraintLayout>